shared/tools/RTGen/src/generated/DelphiParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from F:/Dewesoft/C++/git/Blueberry6/shared/tools/RTGen/src\DelphiParser.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class DelphiParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		String=1, Dot=2, Unit=3, TypeBlock=4, AccessModifier=5, Interface=6, Implementation=7, 
		Uses=8, Function=9, Procedure=10, End=11, Out=12, Var=13, HashTag=14, 
		Quote=15, QuoteSingle=16, Hyphen=17, LessThan=18, GreaterThan=19, Caret=20, 
		LParen=21, RParen=22, LBrace=23, RBrace=24, LBracket=25, RBracket=26, 
		Comma=27, Slash=28, Semicolon=29, AssignEquals=30, Static=31, Const=32, 
		TypeDef=33, Struct=34, Class=35, Public=36, Private=37, Protected=38, 
		Virtual=39, Enum=40, Ampersand=41, Star=42, Colon=43, DoubleColon=44, 
		Exclamation=45, CommentStart=46, RtCommentBlock=47, BlockCommentStart=48, 
		BlockCommentEnd=49, PrimitiveValue=50, Pipe=51, CallingConvention=52, 
		VarModifiers=53, Identifier=54, HexadecimalConstant=55, Number=56, Int=57, 
		AlphaNumeric=58, Boolean=59, Whitespace=60, Comment=61, BlockComment=62, 
		Newline=63, Implementations=64, StringDouble=65;
	public const int
		RULE_start = 0, RULE_unit = 1, RULE_usings = 2, RULE_typeDecls = 3, RULE_globalFunctionDecl = 4, 
		RULE_globalProcedureDecl = 5, RULE_delegateDecl = 6, RULE_typeDecl = 7, 
		RULE_pointerType = 8, RULE_enumTypeDecl = 9, RULE_enumTypePart = 10, RULE_interfaceDecl = 11, 
		RULE_functionDecl = 12, RULE_functionParams = 13, RULE_functionParam = 14, 
		RULE_procedureDecl = 15, RULE_namespace = 16, RULE_guidDecl = 17, RULE_implementations = 18, 
		RULE_rtComment = 19, RULE_rtFuncs = 20, RULE_rtFunc = 21, RULE_rtArguments = 22, 
		RULE_rtArg = 23, RULE_rtLiteral = 24;
	public static readonly string[] ruleNames = {
		"start", "unit", "usings", "typeDecls", "globalFunctionDecl", "globalProcedureDecl", 
		"delegateDecl", "typeDecl", "pointerType", "enumTypeDecl", "enumTypePart", 
		"interfaceDecl", "functionDecl", "functionParams", "functionParam", "procedureDecl", 
		"namespace", "guidDecl", "implementations", "rtComment", "rtFuncs", "rtFunc", 
		"rtArguments", "rtArg", "rtLiteral"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'.'", "'unit'", "'type'", null, "'interface'", "'implementation'", 
		"'uses'", "'function'", "'procedure'", "'end'", "'out'", "'var'", "'#'", 
		"'\"'", "'''", "'-'", "'<'", "'>'", "'^'", "'('", "')'", "'{'", "'}'", 
		"'['", "']'", "','", "'/'", "';'", "'='", "'static'", "'const'", "'typedef'", 
		"'struct'", "'class'", "'public'", "'private'", "'protected'", "'virtual'", 
		"'enum'", "'&'", "'*'", "':'", "'::'", "'!'", "'//'", "'/*#'", "'/*'", 
		"'*/'", null, "'|'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "String", "Dot", "Unit", "TypeBlock", "AccessModifier", "Interface", 
		"Implementation", "Uses", "Function", "Procedure", "End", "Out", "Var", 
		"HashTag", "Quote", "QuoteSingle", "Hyphen", "LessThan", "GreaterThan", 
		"Caret", "LParen", "RParen", "LBrace", "RBrace", "LBracket", "RBracket", 
		"Comma", "Slash", "Semicolon", "AssignEquals", "Static", "Const", "TypeDef", 
		"Struct", "Class", "Public", "Private", "Protected", "Virtual", "Enum", 
		"Ampersand", "Star", "Colon", "DoubleColon", "Exclamation", "CommentStart", 
		"RtCommentBlock", "BlockCommentStart", "BlockCommentEnd", "PrimitiveValue", 
		"Pipe", "CallingConvention", "VarModifiers", "Identifier", "HexadecimalConstant", 
		"Number", "Int", "AlphaNumeric", "Boolean", "Whitespace", "Comment", "BlockComment", 
		"Newline", "Implementations", "StringDouble"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DelphiParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static DelphiParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DelphiParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DelphiParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StartContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UnitContext unit() {
			return GetRuleContext<UnitContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Interface() { return GetToken(DelphiParser.Interface, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public UsingsContext usings() {
			return GetRuleContext<UsingsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclsContext typeDecls() {
			return GetRuleContext<TypeDeclsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImplementationsContext implementations() {
			return GetRuleContext<ImplementationsContext>(0);
		}
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.EnterStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.ExitStart(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(Context, State);
		EnterRule(_localctx, 0, RULE_start);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50;
			unit();
			State = 51;
			Match(Interface);
			State = 52;
			usings();
			State = 53;
			typeDecls();
			State = 54;
			implementations();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Unit() { return GetToken(DelphiParser.Unit, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NamespaceContext @namespace() {
			return GetRuleContext<NamespaceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Semicolon() { return GetToken(DelphiParser.Semicolon, 0); }
		public UnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.EnterUnit(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.ExitUnit(this);
		}
	}

	[RuleVersion(0)]
	public UnitContext unit() {
		UnitContext _localctx = new UnitContext(Context, State);
		EnterRule(_localctx, 2, RULE_unit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56;
			Match(Unit);
			State = 57;
			@namespace();
			State = 58;
			Match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsingsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Uses() { return GetToken(DelphiParser.Uses, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NamespaceContext[] @namespace() {
			return GetRuleContexts<NamespaceContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NamespaceContext @namespace(int i) {
			return GetRuleContext<NamespaceContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Semicolon() { return GetToken(DelphiParser.Semicolon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(DelphiParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(DelphiParser.Comma, i);
		}
		public UsingsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usings; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.EnterUsings(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.ExitUsings(this);
		}
	}

	[RuleVersion(0)]
	public UsingsContext usings() {
		UsingsContext _localctx = new UsingsContext(Context, State);
		EnterRule(_localctx, 4, RULE_usings);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60;
			Match(Uses);
			State = 61;
			@namespace();
			State = 66;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 62;
				Match(Comma);
				State = 63;
				@namespace();
				}
				}
				State = 68;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 69;
			Match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDeclsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TypeBlock() { return GetToken(DelphiParser.TypeBlock, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclContext[] typeDecl() {
			return GetRuleContexts<TypeDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclContext typeDecl(int i) {
			return GetRuleContext<TypeDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DelegateDeclContext[] delegateDecl() {
			return GetRuleContexts<DelegateDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DelegateDeclContext delegateDecl(int i) {
			return GetRuleContext<DelegateDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalFunctionDeclContext[] globalFunctionDecl() {
			return GetRuleContexts<GlobalFunctionDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalFunctionDeclContext globalFunctionDecl(int i) {
			return GetRuleContext<GlobalFunctionDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalProcedureDeclContext[] globalProcedureDecl() {
			return GetRuleContexts<GlobalProcedureDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalProcedureDeclContext globalProcedureDecl(int i) {
			return GetRuleContext<GlobalProcedureDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RtCommentContext[] rtComment() {
			return GetRuleContexts<RtCommentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RtCommentContext rtComment(int i) {
			return GetRuleContext<RtCommentContext>(i);
		}
		public TypeDeclsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDecls; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.EnterTypeDecls(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.ExitTypeDecls(this);
		}
	}

	[RuleVersion(0)]
	public TypeDeclsContext typeDecls() {
		TypeDeclsContext _localctx = new TypeDeclsContext(Context, State);
		EnterRule(_localctx, 6, RULE_typeDecls);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			Match(TypeBlock);
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Function) | (1L << Procedure) | (1L << CommentStart) | (1L << Identifier))) != 0)) {
				{
				State = 77;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
				case 1:
					{
					State = 72;
					typeDecl();
					}
					break;
				case 2:
					{
					State = 73;
					delegateDecl();
					}
					break;
				case 3:
					{
					State = 74;
					globalFunctionDecl();
					}
					break;
				case 4:
					{
					State = 75;
					globalProcedureDecl();
					}
					break;
				case 5:
					{
					State = 76;
					rtComment();
					}
					break;
				}
				}
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalFunctionDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDeclContext functionDecl() {
			return GetRuleContext<FunctionDeclContext>(0);
		}
		public GlobalFunctionDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globalFunctionDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.EnterGlobalFunctionDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.ExitGlobalFunctionDecl(this);
		}
	}

	[RuleVersion(0)]
	public GlobalFunctionDeclContext globalFunctionDecl() {
		GlobalFunctionDeclContext _localctx = new GlobalFunctionDeclContext(Context, State);
		EnterRule(_localctx, 8, RULE_globalFunctionDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82;
			functionDecl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalProcedureDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ProcedureDeclContext procedureDecl() {
			return GetRuleContext<ProcedureDeclContext>(0);
		}
		public GlobalProcedureDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globalProcedureDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.EnterGlobalProcedureDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.ExitGlobalProcedureDecl(this);
		}
	}

	[RuleVersion(0)]
	public GlobalProcedureDeclContext globalProcedureDecl() {
		GlobalProcedureDeclContext _localctx = new GlobalProcedureDeclContext(Context, State);
		EnterRule(_localctx, 10, RULE_globalProcedureDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			procedureDecl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DelegateDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(DelphiParser.Identifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AssignEquals() { return GetToken(DelphiParser.AssignEquals, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDeclContext functionDecl() {
			return GetRuleContext<FunctionDeclContext>(0);
		}
		public DelegateDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_delegateDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.EnterDelegateDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.ExitDelegateDecl(this);
		}
	}

	[RuleVersion(0)]
	public DelegateDeclContext delegateDecl() {
		DelegateDeclContext _localctx = new DelegateDeclContext(Context, State);
		EnterRule(_localctx, 12, RULE_delegateDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(Identifier);
			State = 87;
			Match(AssignEquals);
			State = 88;
			functionDecl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Identifier() { return GetTokens(DelphiParser.Identifier); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier(int i) {
			return GetToken(DelphiParser.Identifier, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AssignEquals() { return GetToken(DelphiParser.AssignEquals, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Semicolon() { return GetToken(DelphiParser.Semicolon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PointerTypeContext pointerType() {
			return GetRuleContext<PointerTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EnumTypeDeclContext enumTypeDecl() {
			return GetRuleContext<EnumTypeDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InterfaceDeclContext interfaceDecl() {
			return GetRuleContext<InterfaceDeclContext>(0);
		}
		public TypeDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.EnterTypeDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.ExitTypeDecl(this);
		}
	}

	[RuleVersion(0)]
	public TypeDeclContext typeDecl() {
		TypeDeclContext _localctx = new TypeDeclContext(Context, State);
		EnterRule(_localctx, 14, RULE_typeDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			Match(Identifier);
			State = 91;
			Match(AssignEquals);
			State = 96;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Identifier:
				{
				State = 92;
				Match(Identifier);
				}
				break;
			case Caret:
				{
				State = 93;
				pointerType();
				}
				break;
			case LParen:
				{
				State = 94;
				enumTypeDecl();
				}
				break;
			case Interface:
				{
				State = 95;
				interfaceDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 98;
			Match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PointerTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Caret() { return GetToken(DelphiParser.Caret, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(DelphiParser.Identifier, 0); }
		public PointerTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pointerType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.EnterPointerType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.ExitPointerType(this);
		}
	}

	[RuleVersion(0)]
	public PointerTypeContext pointerType() {
		PointerTypeContext _localctx = new PointerTypeContext(Context, State);
		EnterRule(_localctx, 16, RULE_pointerType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			Match(Caret);
			State = 101;
			Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnumTypeDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LParen() { return GetToken(DelphiParser.LParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public EnumTypePartContext[] enumTypePart() {
			return GetRuleContexts<EnumTypePartContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EnumTypePartContext enumTypePart(int i) {
			return GetRuleContext<EnumTypePartContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RParen() { return GetToken(DelphiParser.RParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(DelphiParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(DelphiParser.Comma, i);
		}
		public EnumTypeDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enumTypeDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.EnterEnumTypeDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.ExitEnumTypeDecl(this);
		}
	}

	[RuleVersion(0)]
	public EnumTypeDeclContext enumTypeDecl() {
		EnumTypeDeclContext _localctx = new EnumTypeDeclContext(Context, State);
		EnterRule(_localctx, 18, RULE_enumTypeDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			Match(LParen);
			State = 104;
			enumTypePart();
			State = 109;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 105;
				Match(Comma);
				State = 106;
				enumTypePart();
				}
				}
				State = 111;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 112;
			Match(RParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnumTypePartContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(DelphiParser.Identifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AssignEquals() { return GetToken(DelphiParser.AssignEquals, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PrimitiveValue() { return GetToken(DelphiParser.PrimitiveValue, 0); }
		public EnumTypePartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enumTypePart; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.EnterEnumTypePart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDelphiParserListener typedListener = listener as IDelphiParserListener;
			if (typedListener != null) typedListener.ExitEnumTypePart(this);
		}
	}

	[RuleVersion(0)]
	public EnumTypePartContext enumTypePart() {
		EnumTypePartContext _localctx = new EnumTypePartContext(Context, State);
		EnterRule(_localctx, 20, RULE_enumTypePart);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			Match(Identifier);
			State = 117;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==AssignEquals) {
				{
				State = 115;
				Match(AssignEquals);
				State = 116;
				Match(PrimitiveValue);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
